[package]
name = "ods-rs"
version = "0.1.0"
authors = ["toversus <toversus2357@gmail.com>"]

[dependencies]

[[bin]]
name = "ex1-1-1"
path = "./ex1/ex1-1-1.rs"

[[bin]]
name = "ex1-1-2"
path = "./ex1/ex1-1-2.rs"

[[bin]]
name = "ex1-1-3"
path = "./ex1/ex1-1-3.rs"

[[bin]]
name = "ex1-1-4"
path = "./ex1/ex1-1-4.rs"

[[bin]]
name = "ex1-1-5"
path = "./ex1/ex1-1-5.rs"
